# EpicGame

./: .gitmodules  CMakeLists.txt
GameBase/: CMakeLists.txt
GameBase/Client/: CMakeList.txt  native-lib.cpp
GameBase/Engine/: Game.cpp  Game.h  GameBase.cpp  GameBase.h
GameBase/Engine/AI/: PathNet.h
GameBase/Engine/Entity/: Entity.cpp  Entity.h  Player.cpp  Player.h  Terminator.h
GameBase/Engine/Navigation/: NavigationGrid.cpp  NavigationGrid.h
GameBase/Engine/Scene/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h
GameBase/Test/01/: CMakeList.txt  CMakeLists.txt  main.cpp
